2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkEntry.t
	* xs/GtkEntry.xs: Track the recent upstream function renaming:
	gtk_entry_get_pixbuf → gtk_entry_get_icon_pixbuf,
	gtk_entry_get_stock → gtk_entry_get_icon_stock, and
	gtk_entry_get_storage_type → gtk_entry_get_icon_storage_type.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkX11.xs: Call the atom arg for
	Gtk2::Gdk::Atom->to_xatom_for_display "atom" for clarity in the
	generated POD.  Patch by Kevin Ryde.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkRecentChooser.t
	* t/GtkRecentManager.t: Use Gtk2->main_iteration instead of
	Gtk2::TestHelper's run_main to spin the main loop.  This avoids
	hangs on some machines.  Patch by Jeffrey Ratcliffe.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkIconTheme.t: Skip tests that rely on the presence of a
	stock icon if that icon isn't present.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/pango-compat.t: Don't use Gtk2::Pango::Cairo::FontMap in the
	compatibility checks as it isn't available in all pango versions
	and I don't want to fiddle with version checks.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkEvent.t: Fix a skip count.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkAction.t: Use an activatable widget for testing the proxy
	stuff.  Recent gtk+ versions enforce this.

2009-02-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkPixbufLoader.t: Don't use an auto-detecting pixbuf loader
	since that's broken for PPM images in at least gtk+ >= 2.14.3 (see
	GNOME #570780).

2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkX11.t
	* xs/GdkX11.xs: Wrap gdk_x11_atom_to_xatom and
	gdk_x11_atom_to_xatom_for_display.  Patch by chris.  (GNOME
	#566884)

2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellRenderer.t
	* xs/GtkCellRenderer.xs: In gtk2perl_cell_renderer_start_editing,